# TRiMW-Stack

./: README.md  next.config.js  package-lock.json  package.json
src/api/: graphQL.ts
src/api/collab-sessions/: index.ts
src/api/identity/models/: identity.js
src/app/: layout.tsx  page.tsx
src/components/: DeviceToggle.tsx
src/components/DitherDemo/: DitherCanvas.tsx
src/core/: DitherController.ts
src/core/shaders/: DitherMaterial.ts
src/store/: sceneStore.ts
wasm-dither/: Cargo.toml
wasm-dither/src/: lib.rs  lib2.rs  quantumCrypto.ts
