[package]
name = "wasm-dither"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.87"
js-sys = "0.3.64"
web-sys = { version = "0.3.64", features = ["ImageData", "CanvasRenderingContext2d"] }
serde = { version = "1.0.188", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"